Fix fly-out layout
Don't overflow below the bottom of the page

Don't overlap filters when they are present and closed

Stay behind filters when they are open

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1003,6 +1003,7 @@ ul.dropdown-menu{
   background: $map-overlay;
 }
 map-bottom-toggle {
+  z-index: 1;
   position: absolute;
   bottom: $bottom-bar-height + 1;
   header {
@@ -1136,11 +1137,15 @@ map-bottom-toggle.filters {
   position: absolute;
   right: $sidebar-width;
   top: $nav-height;
-  height: 100%;
+  bottom: $bottom-bar-height + 1px;
   width: $flyout-width;
   padding: 15px 30px;
   background: hsla(0, 0%, 97%, 0.9);
   border-left: 1px solid hsla(0, 0%, 85%, 0.5);
+  overflow-y: auto;
+  .has-filters & {
+    bottom: ($bottom-bar-height + 1px) * 2;
+  }
 }
 .map-flyout header,
 .map-flyout .stat {
